# secure-rpc

./: .gitignore  Cargo.toml  README.md  build.rs
example/: Cargo.toml  build.rs  loopback.rs
example/bandwidth/: client.rs  server.rs
example/loopback/: client.rs  common.rs  mod.rs  server.rs
example/simple_cb/: client.rs  common.rs  server.rs
proto/: precomm.proto  srpc_grpc.proto
shell/: run-loopback.sh
src/: lib.rs  srpc.rs
src/conf/: conf.rs  mod.rs
src/core/: mod.rs  srpc_core.rs  srpc_dispatcher.rs  srpc_session.rs
src/core/network/: mod.rs  srpc_core_network.rs  srpc_grpc.rs
src/msg/: mod.rs  srpc_msg.rs
src/tee/: mod.rs  srpc_tee_sgx.rs
test/: ibverbs.rs
