[package]
name = "secrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tarpc = "0.30"
serde = { version = "1.0", features = ["derive"] } 
tracing                 = { version = "0.1", features = ["log-always"] }
tracing-subscriber      = "0.2"
once_cell = "1.15"
flexbuffers = "2.0" 
futures = "0.3"
ibverbs = "0.7" 
tokio = { version = "1.21", features = ["full"] }

[[bin]]
name = "ibverbs"
path = "test/ibverbs.rs"

[[bin]]
name = "srpc"
path = "src/srpc.rs"
