[package]
name = "secrpc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# tarpc = "0.30"
serde = { version = "1.0", features = ["derive"] } 
tracing = { version = "0.1", features = ["log-always"] }
tracing-subscriber = "0.2"
once_cell = "1.15"
flexbuffers = "2.0" 
futures = "0.3"
ibverbs = { git = "https://gitee.com/gaoweihe/rust-ibverbs.git" }
tokio = { version = "1.21", features = ["full"] } 
tonic = "0.7" 
prost = "0.10"
argparse = "0.2" 
lazy_static = "1.4"
exitcode = "1.1"
core_affinity = "0.5"

[build-dependencies]
tonic-build = "0.7"

[[bin]]
name = "loopback-server"
path = "loopback/server.rs"

[[bin]]
name = "loopback-client"
path = "loopback/client.rs"
